--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "terminal.integrated.shell.windows": "C:\\WINDOWS\\Sysnative\\bash.exe",
   "cSpell.words": [
+    "daemonize",
     "msecs",
     "strftime"
   ],
