--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "terminal.integrated.shell.windows": "C:\\WINDOWS\\Sysnative\\bash.exe",
   "cSpell.words": [
     "daemonize",
+    "errc",
+    "errh",
+    "errt",
     "msecs",
     "strftime"
   ],
