--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,7 @@ venv.bak/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+/.idea
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
