--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,7 @@
   // "terminal.integrated.shell.windows": "C:\\Windows\\System32\\bash.exe"
     "cSpell.words": [
     "getcwd"
-  ]
+  ],
+  "python.pythonPath": "C:\\Users\\vagrant\\envs\\algo3\\Scripts\\python.exe",
+  "python.formatting.provider": "yapf"
 }
