Restructure docker layout

--- a/docker/broker/Dockerfile
+++ b/docker/broker/Dockerfile
@@ -1,3 +1,7 @@
+############################
+# Broker
+############################
+
 # pull official base image
 FROM python:3.7.4-alpine
 
@@ -13,9 +17,9 @@ RUN echo "http://dl-8.alpinelinux.org/alpine/edge/community" >> /etc/apk/reposit
 # RUN apk --no-cache --update-cache add gcc gfortran build-base wget freetype-dev libpng-dev openblas-dev
 RUN ln -s /usr/include/locale.h /usr/include/xlocale.h
 RUN pip install cython
-COPY ./requirements_broker.txt /code/requirements.txt
+COPY ./requirements.txt /code/requirements.txt
 RUN pip install -r requirements.txt
-copy ./set_environ.sh /code/
+COPY ./set_environ.sh /code/
 
 # run entrypoint.sh to set environment variables and start broker
 ENTRYPOINT ["/code/entrypoint.sh"]
